--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
+    "dev": "node ./server.js",
     "build": "next build",
     "start": "next start"
   },
@@ -12,7 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "fetch": "^1.1.0",
+    "ioredis": "^4.14.0",
+    "koa": "^2.8.1",
+    "koa-router": "^7.4.0",
+    "koa-session": "^5.12.2",
     "next": "^9.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
