--- a/package.json
+++ b/package.json
@@ -12,18 +12,24 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@zeit/next-css": "^1.0.1",
+    "antd": "^3.22.0",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.12.0",
     "fetch": "^1.1.0",
     "ioredis": "^4.14.0",
     "koa": "^2.8.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.2",
+    "less": "^3.10.1",
+    "less-loader": "^5.0.0",
     "next": "^9.0.3",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^7.1.0",
     "redux": "^4.0.4",
     "redux-devtools-extension": "^2.13.8",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "webpack-filter-warnings-plugin": "^1.2.1"
   }
 }
