--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "less": "^3.10.1",
     "less-loader": "^5.0.0",
     "next": "^9.0.3",
+    "nprogress": "^0.2.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^7.1.0",
