--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "fetch": "^1.1.0",
     "ioredis": "^4.14.0",
     "koa": "^2.8.1",
+    "koa-body": "^4.1.1",
+    "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
     "koa-session": "^5.12.2",
     "less": "^3.10.1",
     "less-loader": "^5.0.0",
+    "lru-cache": "^5.1.1",
+    "moment": "^2.24.0",
     "next": "^9.0.3",
     "nprogress": "^0.2.0",
     "react": "^16.7.0",
