--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "node ./server.js",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "export": "next export"
   },
   "keywords": [],
   "author": "",
@@ -14,9 +15,11 @@
   "dependencies": {
     "@zeit/next-css": "^1.0.1",
     "antd": "^3.22.0",
+    "atob": "^2.1.2",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.12.0",
     "fetch": "^1.1.0",
+    "github-markdown-css": "^3.0.1",
     "ioredis": "^4.14.0",
     "koa": "^2.8.1",
     "koa-body": "^4.1.1",
@@ -26,6 +29,7 @@
     "less": "^3.10.1",
     "less-loader": "^5.0.0",
     "lru-cache": "^5.1.1",
+    "markdown-it": "^9.1.0",
     "moment": "^2.24.0",
     "next": "^9.0.3",
     "nprogress": "^0.2.0",
