--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,7 @@
       "import",
       {
         "libraryName": "antd",
-        "style": true // `style: true` 会加载 less 文件
+        "style": "less" // `style: true` 会加载 less 文件
       }
     ]
   ]
